--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -1,6 +1,6 @@
-// hiding burger menu until media queries kick in
+// hiding burger menu until media queries kick in (at 768px width or less media query)
 .burger-menu-slide {
-  // display: none;
+  display: none;
 
   label {
     cursor: pointer;
@@ -64,8 +64,8 @@
   background-color: $secondary-accent;
   width: 310px;
   border-radius: 20px;
-  border: 3px solid $primary;
-  margin: 0 10px;
+  border: 5px solid $primary;
+  margin: 5px 10px;
 }
 
 .burger-nav {
@@ -90,8 +90,6 @@
     }
   }
 }
-
-
 
 .nav-bar {
   ul {
